# codon2protein

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/codon2protein/: __init__.py  codon2protein.py  dev.py  human_notch_translated_peptides.csv
test/: codon2protein.py
tests/: read-input.py  test_codon2protein.py  test_codon_table.csv  test_fasta.fasta
