[tool.poetry]
name = "codon2protein"
version = "0.1.0"
description = "EIPP project: A program to convert codons to proteins and create a Python package"
authors = ["group 5"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
